--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -59,7 +59,7 @@
                             <div class="dropdown-menu">
                                 {% if user.is_authenticated %}
 
-                                <a href="#" onclick="confirmLogout(event)" class="dropdown-item">lougout</a>
+                                <a href="{% url 'logout' %}" onclick="confirmLogout(event)" class="dropdown-item">lougout</a>
                                 {% else %}
                                 <a href="{% url 'login' %}" class="dropdown-item">Login</a>
                                 <a href="{% url 'register' %}" class="dropdown-item">Register</a>
