--- a/templates/accounts/cart.html
+++ b/templates/accounts/cart.html
@@ -32,12 +32,12 @@
                                     <td>${{ cart_item.product.price }}</td>
                                     <td>
                                         <div class="qty">
-                                            <button class="btn-minus"><i class="fa fa-minus"></i></button>
-                                            <input type="text" value="{{ cart_item.quantity }}">
-                                            <button class="btn-plus"><i class="fa fa-plus"></i></button>
+                                            <button class="btn-minus" onclick="updateQuantity('{{ cart_item.uid }}', null ,-1)"><i class="fa fa-minus"></i></button>
+                                            <input type="text" name="quantity" id="quantity-{{ cart_item.uid }}" value="{{ cart_item.quantity }}">
+                                            <button class="btn-plus"  onclick="updateQuantity('{{ cart_item.uid }}', null ,1)"><i class="fa fa-plus"></i></button>
                                         </div>
                                     </td>
-                                    <td>${{ cart_item.get_product_price }}</td>
+                                    <td id="total-price-{{ cart_item.uid }}">${{ cart_item.get_total_price}}</td>
                                     <td>
                                         <form method="POST" action="{% url 'remove_cart' cart_item.uid %}">
                                             {% csrf_token %}
@@ -86,9 +86,9 @@
                             <div class="cart-summary">
                                 <div class="cart-content">
                                     <h1>Cart Summary</h1>
-                                    <p>Sub Total<span>${{ cart.get_product_price }}</span></p>
+                                    <p>Sub Total<span  id="subtotal">${{ cart.get_cart_total }}</span></p>
                                     <p>Shipping Cost<span>${{ shipping_cost }}</span></p>
-                                    <h2>Grand Total<span>${{ cart.get_cart_total }}</span></h2>
+                                    <h2>Grand Total<span id="grandtotal">${{ cart.get_cart_total  }}</span></h2>
                                 </div>
                                 <div class="cart-btn">
                                    
