--- a/templates/product/product.html
+++ b/templates/product/product.html
@@ -36,15 +36,18 @@
                                     <h4>Price:</h4>
                                     <p>${{products.price}} <span>$149</span></p>
                                 </div>
-                                <div class="quantity">
+                                {% comment %} {% for item in cart.cart_items.all %} {% endcomment %}
+                                {% comment %} <div class="quantity">
                                     <h4>Quantity:</h4>
                                     <div class="qty">
-                                        <button class="btn-minus"><i class="fa fa-minus"></i></button>
-                                        <input type="text" value="1">
-                                        <button class="btn-plus"><i class="fa fa-plus"></i></button>
+                                        <button class="btn-minus" type="button" onclick="updateQuantity(null,'{{ products.uid }}', -1)"><i class="fa fa-minus"></i></button>
+                                        <input type="text" name="quantity" id="quantity-{{ products.uid }}" value="{{ quantity |default:0}}" class="quantity-input" readonly>
+                                        <button class="btn-plus" type="button" onclick="updateQuantity(null,'{{ products.uid }}', 1)"><i class="fa fa-plus"></i></button>
+                                       
                                     </div>
-                                </div>
-                                <div class="p-size">
+                                </div> {% endcomment %}
+                            {% comment %} {% endfor %} {% endcomment %}
+                                {% comment %} <div class="p-size">
                                     <h4>Size:</h4>
                                     <div class="btn-group btn-group-sm">
                                         <button type="button" class="btn">S</button>
@@ -60,7 +63,7 @@
                                         <button type="button" class="btn">Black</button>
                                         <button type="button" class="btn">Blue</button>
                                     </div> 
-                                </div>
+                                </div> {% endcomment %}
                                 <div class="action">
                                     {% if user.is_authenticated %}
                                     {% include "base/alert.html" %}
@@ -440,3 +443,4 @@
     </div>
 </div>
 {% endblock  %}
+
